更新F5-TTS预备知识

--- a/Models/Diffusion/2024.10.09_F5-TTS.md
+++ b/Models/Diffusion/2024.10.09_F5-TTS.md
@@ -69,7 +69,48 @@ E3 TTS~\cite{e3tts} abandons phoneme-level duration and applies cross-attention 
 
 In this paper, we propose \textbf{F5-TTS}, a \textbf{F}airytaler that \textbf{F}akes \textbf{F}luent and \textbf{F}aithful speech with \textbf{F}low matching. Maintaining the simplicity of pipeline without phoneme alignment, duration predictor, text encoder, and semantically infused codec model, F5-TTS leverages the Diffusion Transformer with ConvNeXt V2~\cite{convnextv2} to better tackle text-speech alignment during in-context learning. We stress the deep entanglement of semantic and acoustic features in the E2 TTS model design, which has inherent problems and will pose alignment failure issues that could not simply be solved with re-ranking. With in-depth ablation studies, our proposed F5-TTS demonstrates stronger robustness, in generating more faithful speech to the text prompt, while maintaining comparable speaker similarity. Additionally, we introduce an inference-time sampling strategy for flow steps substantially improving naturalness, intelligibility, and speaker similarity of generation. This approach can be seamlessly integrated into existing flow matching based models without retraining.
 
-## 2.Related Works: 相关工作
+## 2.Preliminaries: 预备知识
+
+### Flow Matching: 流匹配
+
+The Flow Matching (FM) objective is to match a probability path $p_t$ from a simple distribution $\displaystyle p_0$, \textit{e.g.}, the standard normal distribution $p(x) = \mathcal{N}(x|0,I)$, to $\displaystyle p_1$ approximating the data distribution $q$. In short, the FM loss regresses the vector field $u_t$ with a neural network $v_t$ as
+
+$$
+\mathcal{L}_{FM}(\theta) = E_{t, p_t(x)} \left\| v_t(x) - u_t(x) \right\| ^2,
+$$
+
+where $\theta$ parameterizes the neural network, $t\sim\mathcal{U}[0,1]$ and $x\sim p_t(x)$. The model $v_t$ is trained over the entire flow step and data range, ensuring it learns to handle the entire transformation process from the initial distribution to the target distribution.
+
+As we have no prior knowledge of how to approximate $p_t$ and $u_t$, a conditional probability path $p_t(x|x_1) = \mathcal{N}(x\ |\ \mu_t(x_1),\sigma_t(x_1)^2I)$ is considered in actual training, and the Conditional Flow Matching (CFM) loss is proved to have identical gradients \textit{w.r.t.} $\theta$~\cite{cfm-ot}. $x_1$ is the random variable corresponding to training data. $\mu$ and $\sigma$ is the time-dependent mean and scalar standard deviation of Gaussian distribution.
+
+Remember that the goal is to construct target distribution (data samples) from initial simple distribution, \textit{e.g.}, Gaussian noise. With the conditional form, the flow map $\psi_t(x)=\sigma_t(x_1)x+\mu_t(x_1)$ with $\mu_0(x_1)=0$ and $\sigma_0(x_1)=1$, $\mu_1(x_1)=x_1$ and $\sigma_1(x_1)=0$ is made to have all conditional probability paths converging to $p_0$ and $p_1$ at the start and end. The flow thus provides a vector field $d\psi_t(x_0)/dt = u_t(\psi_t(x_0)|x_1)$. Reparameterize $p_t(x|x_1)$ with $x_0$, we have
+
+$$
+\mathcal{L}_{\text{CFM}}(\theta) = E_{t, q(x_{1}), p(x_0)} \| v_{t}(\psi_t(x_0)) - \frac{d}{dt}\psi_t(x_0) \| ^2.
+$$
+
+Further leveraging Optimal Transport form $\psi_t(x)=(1-t)x+tx_1$, we have the OT-CFM loss,
+
+$$
+\mathcal{L}_{\text{CFM}}(\theta) = E_{t, q(x_{1}), p(x_0)} \| v_{t}((1-t)x_0+tx_1) - (x_1-x_0) \| ^2.
+$$
+
+To view in a more general way~\cite{snrtheory}, if formulating the loss in terms of log signal-to-noise ratio (log-SNR) $\lambda$ instead of flow step $t$, and parameterizing to predict $x_0$ ($\epsilon$, commonly stated in diffusion model) instead of predict $x_1-x_0$, the CFM loss is equivalent to the $v$-prediction~\cite{vpredict} loss with cosine schedule.
+
+For inference, given sampled noise $x_0$ from initial distribution $p_0$, flow step $t\in[0,1]$ and condition with respect to generation task, the ordinary differential equation (ODE) solver~\cite{torchdiffeq} is used to evaluate $\psi_1(x_0)$ the integration of $d\psi_t(x_0)/dt$ with $\psi_0(x_0)=x_0$. The number of function evaluations (NFE) is the times going through the neural network as we may provide multiple flow step values from 0 to 1 as input to approximate the integration. Higher NFE will produce more accurate results and certainly take more calculation time.
+
+### Classifier-Free Guidance
+
+
+Classifier Guidance (CG) is proposed by \cite{cg}, functions by adding the gradient of an additional classifier, while such an explicit way to condition the generation process may have several problems. Extra training of the classifier is required and the generation result is directly affected by the quality of the classifier. Adversarial attacks might also occur as the guidance is introduced through the way of updating the gradient. Thus deceptive images with imperceptible details to human eyes may be generated, which are not conditional.
+
+Classifier-Free Guidance (CFG)~\cite{cfg} proposes to replace the explicit classifier with an implicit classifier without directly computing the explicit classifier and its gradient. The gradient of a classifier can be expressed as a combination of conditional generation probability and unconditional generation probability. By dropping the condition with a certain rate during training, and linear extrapolating the inference outputs with and without condition $c$, the final guided result is obtained. We could balance between fidelity and diversity of the generated samples with
+
+$$
+v_{t,CFG} = v_{t}(\psi_t(x_0),c) + \alpha (v_{t}(\psi_t(x_0),c)-v_{t}(\psi_t(x_0)))
+$$
+
+in CFM case, where $\alpha$ is the CFG strength.\footnote{Note that the inference time will be doubled if CFG. Model $v_t$ will execute the forward process twice, once with condition, and once without.}
 
 ## 3.Methodology: 方法
 
