--- a/Models/Diffusion/2024.10.09_F5-TTS.md
+++ b/Models/Diffusion/2024.10.09_F5-TTS.md
@@ -114,6 +114,62 @@ in CFM case, where $\alpha$ is the CFG strength.\footnote{Note that the inferenc
 
 ## 3.Methodology: 方法
 
+This work aims to build a high-level text-to-speech synthesis system. Following Voicebox \cite{voicebox}, we trained our model on the text-guided speech-infilling task. Based on recent research \cite{dittotts,e2tts,e1tts}, it is promising to train without phoneme-level duration predictor and can achieve higher naturalness in zero-shot generation deprecating explicit phoneme-level alignment. We adopt a similar pipeline as E2 TTS \cite{e2tts} and propose our advanced architecture F5-TTS, addressing the slow convergence (timbre learned well at an early stage but struggled to learn alignment) and robustness issues (failures on hard case generation) of E2 TTS. We also propose a Sway Sampling strategy for flow steps at inference, which significantly improves our model's performance in faithfulness to reference text and speaker similarity.
+
+### 3.1.Pipeline
+
+#### Training
+
+The infilling task is to predict a segment of speech given its surrounding audio and full text (for both surrounding transcription and the part to generate). For simplicity, we reuse the symbol $x$ to denote an audio sample and $y$ the corresponding transcript for a data pair $(x, y)$. As shown in Fig.\ref{fig:overview} (left), the acoustic input for training is an extracted mel spectrogram features $x_1\in \mathbb{R}^{F\times N}$ from the audio sample $x$, where $F$ is mel dimension and $N$ is the sequence length. In the scope of CFM, we pass in the model the noisy speech $(1-t)x_0+tx_1$ and the masked speech $(1-m)\odot x_1$, where $x_0$ denotes sampled Gaussian noise, $t$ is sampled flow step, and $m\in\{0,1\}^{F\times N}$ represents a binary temporal mask.
+
+Following E2 TTS, we directly use alphabets and symbols for English. We opt for full pinyin to facilitate Chinese zero-shot generation. By breaking the raw text into such character sequence and padding it with filler tokens to the same length as mel frames, we form an extended sequence $z$ with $c_i$ denoting the $i$-th character:
+$$
+z = (c_1, c_2, \ldots, c_M, \underbrace{\langle F \rangle, \ldots, \langle F \rangle}_{(N-M)\text{ times}}).
+$$
+The model is trained to reconstruct $m\odot x_1$ with $(1-m)\odot x_1$ and $z$, which equals to learn the target distribution $p_1$ in form of $P(m\odot x_1|(1-m)\odot x_1,z)$ approximating real data distribution $q$.
+
+#### Inference
+
+To generate a speech with the desired content, we have the audio prompt's mel spectrogram features $x_{ref}$, its transcription $y_{ref}$, and a text prompt $y_{gen}$. Audio prompt serves to provide speaker characteristics and text prompt is to guide the content of generated speech.
+
+The sequence length $N$, or duration, has now become a pivotal factor that necessitates informing the model of the desired length for sample generation. One could train a separate model to predict and deliver the duration based on $x_{ref}$, $y_{ref}$ and $y_{gen}$. Here we simply estimate the duration based on the ratio of the number of characters in $y_{gen}$ and $y_{ref}$. We assume that the sum-up length of characters is no longer than mel length, thus padding with filler tokens is done as during training.
+
+To sample from the learned distribution, the converted mel features $x_{ref}$, along with concatenated and extended character sequence $z_{ref\cdot gen}$ serve as the condition in Eq.\ref{eq:cfg}. We have
+$$
+v_t(\psi_t(x_0),c) = v_t((1-t)x_0+tx_1|x_{ref}, z_{ref\cdot gen}),
+$$
+See from Fig.\ref{fig:overview} (right), we start from a sampled noise $x_0$, and what we want is the other end of flow $x_1$. Thus we use the ODE solver to gradually integrate from $\psi_0(x_0)=x_0$ to $\psi_1(x_0)=x_1$, given $d\psi_t(x_0)/dt=v_t(\psi_t(x_0),x_{ref}, z_{ref\cdot gen})$. During inference, the flow steps are provided in an ordered way, $e.g.$, uniformly sampled a certain number from 0 to 1 according to the NFE setting.
+
+After getting the generated mel with model $v_t$ and ODE solver, we discard the part of $x_{ref}$. Then we leverage a vocoder to convert the mel back to speech signal.
+
+### 3.2.F5-TTS
+
+E2 TTS directly concatenates the padded character sequence with input speech, thus deeply entangling semantic and acoustic features with a large length gap of effective information, which is the underlying cause of hard training and poses several problems in a zero-shot scenario (Sec.\ref{sec:modelarchitecture}). To alleviate the problem of slow convergence and low robustness, we propose F5-TTS which accelerates training and inference and shows a strong robustness in generation. Also, an inference-time Sway Sampling is introduced, which allows inference faster (using less NFE) while maintaining performance. This sampling way of flow step can be directly applied to other CFM models.
+
+#### Model
+
+As shown in Fig.\ref{fig:overview}, we use latent Diffusion Transformer (DiT)~\cite{dit} as backbone. To be specific, we use DiT blocks with zero-initialized adaptive Layer Norm (adaLN-zero). To enhance the model's alignment ability, we also leverage ConvNeXt V2 blocks~\cite{convnextv2}. Its predecessor ConvNeXt V1~\cite{convnext} is used in many works and shows a strong temporal modeling capability in speech domain tasks~\cite{vocos,convnexttts}.
+
+As described in Sec.\ref{sec:pipeline}, the model input is character sequence, noisy speech, and masked speech. Before concatenation in the feature dimension, the character sequence first goes through ConvNeXt blocks. Experiments have shown that this way of providing individual modeling space allows text input to better prepare itself before later in-context learning. Unlike the phoneme-level force alignment done in Voicebox, a rigid boundary for text is not explicitly introduced. The semantic and acoustic features are jointly learned with the entire model. And unlike the way of feeding the model with inputs of significant length difference (length with effective information) as E2 TTS does, our design mitigates such gap.
+
+The flow step $t$ for CFM is provided as the condition of adaLN-zero rather than appended to the concatenated input sequence in Voicebox. We found that an additional mean pooled token of text sequence for adaLN condition is not essential for the TTS task, maybe because the TTS task requires more rigorously guided results and the mean pooled text token is more coarse.
+
+We adopt some position embedding settings in Voicebox. The flow step is embedded with a sinusoidal position. The concatenated input sequence is added with a convolutional position embedding. We apply a rotary position embedding (RoPE)~\cite{rope} for self-attention rather than symmetric bi-directional ALiBi bias~\cite{alibi}. And for extended character sequence $\hat{y}$, we also add it with an absolute sinusoidal position embedding before feeding it into ConvNeXt blocks.
+
+Compared with Voicebox and E2 TTS, we abandoned the U-Net~\cite{unet} style skip connection structure and switched to using DiT with adaLN-zero. Without a phoneme-level duration predictor and explicit alignment process, and nor with extra text encoder and semantically infused neural codec model in DiTTo-TTS, we give the text input a little freedom (individual modeling space) to let it prepare itself before concatenation and in-context learning with speech input.
+
+#### Sampling
+
+As stated in Sec.\ref{sec:fm}, the CFM could be viewed as v-prediction with a cosine schedule. For image synthesis, \cite{sd3} propose to further schedule the flow step with a single-peak logit-normal~\cite{lognorm} sampling, in order to give more weight to intermediate flow steps by sampling them more frequently. We speculate that such sampling distributes the model's learning difficulty more evenly over different flow step $t\in[0,1]$.
+
+In contrast, we train our model with traditional uniformly sampled flow step $t\sim \mathcal{U}[0,1]$ but apply a non-uniform sampling during inference. In specific, we define a \textbf{Sway Sampling} function as
+$$
+f_{sway}(u;s) = u+s\cdot(\cos(\frac{\pi}{2}u)-1+u),
+$$
+which is monotonic with coefficient $s\in[-1,\frac{2}{\pi-2}]$. We first sample $u\sim \mathcal{U}[0,1]$, then apply this function to obtain sway sampled flow step $t$. With $s<0$, the sampling is sway to left; with $s>0$, the sampling is sway to right; and $s=0$ case equals to uniform sampling. Fig.\ref{fig:swaysampling} shows the probability density function of Sway Sampling on flow step $t$.
+
+Conceptually, CFM models focus more on sketching the contours of speech in the early stage ($t\to0$) from pure noise and later focus more on the embellishment of fine-grained details. Therefore, the alignment between speech and text will be determined based on the first few generated results. With a scale parameter $s<0$, we make model inference more with smaller $t$, thus providing the ODE solver with more startup information to evaluate more precisely in initial integration steps.
+
 ## 4.Experiments: 实验
 
 ## 5.Results: 结果
