--- a/Models/Diffusion/2024.10.09_F5-TTS.md
+++ b/Models/Diffusion/2024.10.09_F5-TTS.md
@@ -172,6 +172,32 @@ Conceptually, CFM models focus more on sketching the contours of speech in the e
 
 ## 4.Experiments: 实验
 
+### Datasets
+
+We utilize the in-the-wild multilingual speech dataset Emilia~\cite{emilia} to train our base models. After simply filtering out transcription failure and misclassified language speech, we retain approximately 95K hours of English and Chinese data. We also trained small models for ablation study and architecture search on WenetSpeech4TTS~\cite{wenet4tts} Premium subset, consisting of a 945 hours Mandarin corpus. Base model configurations are introduced below, and small model configurations are in Appendix \ref{appx:smallmodels}. Three test sets are adopted for evaluation, which are LibriSpeech-PC \textit{test-clean}~\cite{librispeechpc}, Seed-TTS \textit{test-en}~\cite{seedtts} with 1088 samples from Common Voice~\cite{commonvoice}, and Seed-TTS \textit{test-zh} with 2020 samples from DiDiSpeech~\cite{didispeech}\footnote{\url{https://github.com/BytedanceSpeech/seed-tts-eval}}. Most of the previous English-only models are evaluated on different subsets of LibriSpeech \textit{test-clean} while the used prompt list is not released, which makes fair comparison difficult. Thus we build and release a 4-to-10-second LibriSpeech-PC subset with 1127 samples to facilitate community comparisons.
+
+### Training
+
+Our base models are trained to 1.2M updates with a batch size of 307,200 audio frames (0.91 hours), for over one week on 8 NVIDIA A100 80G GPUs. The AdamW optimizer~\cite{adamw} is used with a peak learning rate of 7.5e-5, linearly warmed up for 20K updates, and linearly decays over the rest of the training. We set 1 for the max gradient norm clip.
+The F5-TTS base model has 22 layers, 16 attention heads, 1024/2048 embedding/feed-forward network (FFN) dimension for DiT; and 4 layers, 512/1024 embedding/FFN dimension for ConvNeXt V2; in total 335.8M parameters. The reproduced E2 TTS, a 333.2M flat U-Net equipped Transformer, has 24 layers, 16 attention heads, and 1024/4096 embedding/FFN dimension. Both models use RoPE as mentioned in Sec.\ref{sec:f5tts}, a dropout rate of 0.1 for attention and FFN, the same convolutional position embedding as in Voicebox\cite{voicebox}.
+
+We directly use alphabets and symbols for English, use jieba\footnote{\url{https://github.com/fxsjy/jieba}} and pypinyin\footnote{\url{https://github.com/mozillazg/python-pinyin}} to process raw Chinese characters to full pinyins. The character embedding vocabulary size is 2546, counting in the special filler token and all other language characters exist in the Emilia dataset as there are many code-switched sentences. For audio samples we use 100-dimensional log mel-filterbank features with 24 kHz sampling rate and hop length 256. A random 70\% to 100\% of mel frames is masked for infilling task training. For CFG (Sec.\ref{sec:cfg}) training, first the masked speech input is dropped with a rate of 0.3, then the masked speech again but with text input together is dropped with a rate of 0.2. We assume that the two-stage control of CFG training may have the model learn more with text alignment.
+
+### Inference
+
+The inference process is mainly elaborated in Sec.\ref{sec:pipeline}. We use the Exponential Moving Averaged (EMA)~\cite{ema} weights for inference, and the Euler ODE solver for F5-TTS (midpoint for E2 TTS as described in \cite{e2tts}). We use the pretrained vocoder Vocos~\cite{vocos} to convert generated log mel spectrograms to audio signals.
+
+### Baselines
+
+We compare our models with leading TTS systems including, (mainly)
+autoregressive models: VALL-E 2~\cite{valle2}, MELLE~\cite{melle}, FireRedTTS~\cite{fireredtts} and CosyVoice~\cite{cosyvoice};
+non-autoregressive models: Voicebox~\cite{voicebox}, NaturalSpeech 3~\cite{ns3}, DiTTo-TTS~\cite{dittotts}, MaskGCT~\cite{maskgct}, Seed-TTS$_{DiT}$~\cite{seedtts} and our reproduced E2 TTS~\cite{e2tts}. Details of compared models see Appendix~\ref{appx:baselines}.
+
+### Metrics
+
+We measure the performances under \textit{cross-sentence} task. The model is given a reference text, a short speech prompt, and its transcription, and made to synthesize a speech reading the reference text mimicking the speech prompt speaker. In specific, we report Word Error Rate (WER) and speaker Similarity between generated and the original target speeches (SIM-o) for objective evaluation. For WER, we employ Whisper-large-v3~\cite{whisper} to transcribe English and Paraformer-zh~\cite{funasr} for Chinese, following~\cite{seedtts}. For SIM-o, we use a WavLM-large-based~\cite{wavlm} speaker verification model to extract speaker embeddings for calculating the cosine similarity of synthesized and ground truth speeches.
+We use Comparative Mean Opinion Scores (CMOS) and Similarity Mean Opinion Scores (SMOS) for subjective evaluation. For CMOS, human evaluators are given randomly ordered synthesized speech and ground truth, and are to decide how higher the naturalness of the better one surpasses the counterpart, \textit{w.r.t.}~prompt speech. For SMOS, human evaluators are to score the similarity between the synthesized and prompt.
+
 ## 5.Results: 结果
 
 ## 6.Conclusions: 结论
