--- a/Models/Diffusion/2024.10.09_F5-TTS.md
+++ b/Models/Diffusion/2024.10.09_F5-TTS.md
@@ -232,3 +232,8 @@ As stated at the end of Sec.\ref{sec:f5tts}, Sway Sampling with $s<0$ scales mor
 The experiment result is a shred of strong evidence proving that the early flow steps are crucial for sketching the silhouette of target speech based on given prompts faithfully, the later steps focus more on formed intermediate noisy output, where our sway-to-left sampling ($s<0$) finds the profitable niche and takes advantage of it. We emphasize that our inference-time Sway Sampling can be easily applied to existing CFM-based models without retraining. And we will work in the future to combine it with training-time noise schedulers and distillation techniques to further boost efficiency.
 
 ## 6.Conclusions: 结论
+
+This work introduces F5-TTS, a fully non-autoregressive text-to-speech system based on flow matching with diffusion transformer (DiT).
+With a tidy pipeline, literally text in and speech out, F5-TTS achieves state-of-the-art zero-shot ability compared to existing works trained on industry-scale data. We adopt ConvNeXt for text modeling and propose the test-time Sway Sampling strategy to further improve the robustness of speech generation and inference efficiency.
+Our design allows faster training and inference, by achieving a test-time RTF of 0.15, which is competitive with other heavily optimized TTS models of similar performance.
+We open-source our code, and models, to enhance transparency and facilitate reproducible research in this area.
