更新相关链接

--- a/Models/Diffusion/2024.10.09_F5-TTS.md
+++ b/Models/Diffusion/2024.10.09_F5-TTS.md
@@ -56,28 +56,28 @@ We release all code and checkpoints to promote community development ([Github](h
 
 ## 1.Introduction: 引言
 
-Recent research in Text-to-Speech (TTS) has experienced great advancement~\cite{tacotron2,transtts,fastspeech2,glowtts,vits,gradtts,viola,ns1}.
-With a few seconds of audio prompt, current TTS models are able to synthesize speech for any given text and mimic the speaker of audio prompt~\cite{valle,vallex}.
-The synthesized speech can achieve high fidelity and naturalness that they are almost indistinguishable from human speech~\cite{ns2,ns3,valle2,voicebox}.
+Recent research in Text-to-Speech (TTS) has experienced great advancement ([Tacotron2 [1]](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [Transformer-TTS [2]](../TTS2_Acoustic/2018.09.19_TransformerTTS.md); [FastSpeech 2 [3]](../TTS2_Acoustic/2020.06.08_FastSpeech2.md); [Glow-TTS [4]](../TTS2_Acoustic/2020.05.22_Glow-TTS.md); [VITS [5]](../E2E/2021.06.11_VITS.md); [Grad-TTS [6]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); [VioLA [7]](../Speech_LLM/2023.05.25_VioLA.md); [NaturalSpeech [8]](../E2E/2022.05.09_NaturalSpeech.md)).
+With a few seconds of audio prompt, current TTS models are able to synthesize speech for any given text and mimic the speaker of audio prompt ([VALL-E [9]](../Speech_LLM/2023.01.05_VALL-E.md); [VALL-E X [10]](../Speech_LLM/2023.03.07_VALL-E_X.md)).
+The synthesized speech can achieve high fidelity and naturalness that they are almost indistinguishable from human speech ([NaturalSpeech 2 [11]](2023.04.18_NaturalSpeech2.md); [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md); [VALL-E 2 [13]](../Speech_LLM/2024.06.08_VALL-E2.md); [Voicebox [14]](../Speech_LLM/2023.06.23_VoiceBox.md)).
 
-While autoregressive (AR) based TTS models exhibit an intuitive way of consecutively predicting the next token(s) and have achieved promising zero-shot TTS capability, the inherent limitations of AR modeling require extra efforts addressing issues such as inference latency and exposure bias~\cite{ellav,vallt,valler,ralle,voicecraft}.
+While autoregressive (AR) based TTS models exhibit an intuitive way of consecutively predicting the next token(s) and have achieved promising zero-shot TTS capability, the inherent limitations of AR modeling require extra efforts addressing issues such as inference latency and exposure bias ~\cite{[ELLA-V [15]](../Speech_LLM/2024.01.14_ELLA-V.md); vallt,valler,ralle,voicecraft}.
 Moreover, the quality of speech tokenizer is essential for AR models to achieve high-fidelity synthesis~\cite{soundstream,encodec,audiodec,hificodec,speechtokenizer,dmel,ndvq}.
-Thus, there have been studies exploring direct modeling in continuous space~\cite{ardittts,ar-wovq,melle} to enhance synthesized speech quality recently.
+Thus, there have been studies exploring direct modeling in continuous space~\cite{ardittts,ar-wovq,[MELLE [29]](../Speech_LLM/2024.07.11_MELLE.md)} to enhance synthesized speech quality recently.
 
 Although AR models demonstrate impressive zero-shot performance as they perform implicit duration modeling and can leverage diverse sampling strategies, non-autoregressive (NAR) models benefit from fast inference through parallel processing, and effectively balance synthesis quality and latency.
-Notably, diffusion models~\cite{ddpm,score} contribute most to the success of current NAR speech models~\cite{ns2,ns3}.
-In particular, Flow Matching with Optimal Transport path (FM-OT)~\cite{cfm-ot} is widely used in recent research fields not only text-to-speech~\cite{voicebox,voiceflow,matchatts,dittotts,e2tts} but also image generation~\cite{sd3} and music generation~\cite{fluxmusic}.
+Notably, diffusion models ~\cite{ddpm,score} contribute most to the success of current NAR speech models ([NaturalSpeech 2 [11]](2023.04.18_NaturalSpeech2.md); [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md)).
+In particular, Flow Matching with Optimal Transport path (FM-OT)~\cite{cfm-ot} is widely used in recent research fields not only text-to-speech~\cite{[Voicebox [14]](../Speech_LLM/2023.06.23_VoiceBox.md),voiceflow,matchatts,[DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md); [E2 TTS [36]](../Flow/2024.06.26_E2_TTS.md)} but also image generation~\cite{sd3} and music generation~\cite{fluxmusic}.
 
 Unlike AR-based models, the alignment modeling between input text and synthesized speech is crucial and challenging for NAR-based models.
-While NaturalSpeech 3 \cite{ns3} and Voicebox \cite{voicebox} use frame-wise phoneme alignment; Matcha-TTS \cite{matchatts} adopts monotonic alignment search and relies on phoneme-level duration model; recent works find that introducing such rigid and inflexible alignment between text and speech hinders the model from generating results with higher naturalness~\cite{e2tts,seedtts}.
+While [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md) and [Voicebox [14]](../Speech_LLM/2023.06.23_VoiceBox.md) use frame-wise phoneme alignment; Matcha-TTS \cite{matchatts} adopts monotonic alignment search and relies on phoneme-level duration model; recent works find that introducing such rigid and inflexible alignment between text and speech hinders the model from generating results with higher naturalness ([E2 TTS [36]](../Flow/2024.06.26_E2_TTS.md); [Seed-TTS [39]](../Speech_LLM/2024.06.04_Seed-TTS.md)).
 
-E3 TTS~\cite{e3tts} abandons phoneme-level duration and applies cross-attention on the input sequence but yields limited audio quality.
-DiTTo-TTS~\cite{dittotts} uses Diffusion Transformer (DiT)~\cite{dit} with cross-attention conditioned on encoded text from a pretrained language model.
+[E3 TTS [40]](2023.11.02_E3_TTS.md) abandons phoneme-level duration and applies cross-attention on the input sequence but yields limited audio quality.
+[DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md) uses [Diffusion Transformer (DiT) [41]](2022.12.19_DiT.md) with cross-attention conditioned on encoded text from a pretrained language model.
 To further enhance alignment, it uses the pretrained language model to finetune the neural audio codec, infusing semantic information into the generated representations.
-In contrast, E2 TTS~\cite{e2tts}, based on Voicebox~\cite{voicebox}, adopts a simpler way, which removes the phoneme and duration predictor and directly uses characters padded with filler tokens to the length of mel spectrograms as input.
+In contrast, [E2 TTS [36]](../Flow/2024.06.26_E2_TTS.md), based on [Voicebox [14]](../Speech_LLM/2023.06.23_VoiceBox.md), adopts a simpler way, which removes the phoneme and duration predictor and directly uses characters padded with filler tokens to the length of mel spectrograms as input.
 This simple scheme also achieves very natural and realistic synthesized results.
 However, we found that robustness issues exist in E2 TTS for the text and speech alignment.
-Seed-TTS~\cite{seedtts} employs a similar strategy and achieves excellent results, though not elaborated in model details.
+[Seed-TTS [39]](../Speech_LLM/2024.06.04_Seed-TTS.md) employs a similar strategy and achieves excellent results, though not elaborated in model details.
 In these ways of not explicitly modeling phoneme-level duration, models learn to assign the length of each word or phoneme according to the given total sequence length, resulting in improved prosody and rhythm.
 
 In this paper, we propose ***F5-TTS, a Fairytaler that Fakes Fluent and Faithful speech with Flow matching***.
@@ -147,9 +147,9 @@ Model $v_t$ will execute the forward process twice, once with condition, and onc
 ## 3.Methodology: 方法
 
 This work aims to build a high-level text-to-speech synthesis system.
-Following Voicebox \cite{voicebox}, we trained our model on the text-guided speech-infilling task.
-Based on recent research \cite{dittotts,e2tts,e1tts}, it is promising to train without phoneme-level duration predictor and can achieve higher naturalness in zero-shot generation deprecating explicit phoneme-level alignment.
-We adopt a similar pipeline as E2 TTS \cite{e2tts} and propose our advanced architecture ***F5-TTS***, addressing the slow convergence (timbre learned well at an early stage but struggled to learn alignment) and robustness issues (failures on hard case generation) of E2 TTS.
+Following [Voicebox [14]](../Speech_LLM/2023.06.23_VoiceBox.md), we trained our model on the text-guided speech-infilling task.
+Based on recent research ([DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md); [E2 TTS [36]](../Flow/2024.06.26_E2_TTS.md); [E1 TTS [48]](2024.09.14_E1_TTS.md)), it is promising to train without phoneme-level duration predictor and can achieve higher naturalness in zero-shot generation deprecating explicit phoneme-level alignment.
+We adopt a similar pipeline as [E2 TTS [36]](../Flow/2024.06.26_E2_TTS.md) and propose our advanced architecture ***F5-TTS***, addressing the slow convergence (timbre learned well at an early stage but struggled to learn alignment) and robustness issues (failures on hard case generation) of E2 TTS.
 We also propose a Sway Sampling strategy for flow steps at inference, which significantly improves our model's performance in faithfulness to reference text and speaker similarity.
 
 ### 3.1.Pipeline
@@ -200,7 +200,7 @@ This sampling way of flow step can be directly applied to other CFM models.
 
 #### Model
 
-As shown in Fig.\ref{fig:overview}, we use latent Diffusion Transformer (DiT)~\cite{dit} as backbone.
+As shown in Fig.\ref{fig:overview}, we use latent [Diffusion Transformer (DiT) [41]](2022.12.19_DiT.md) as backbone.
 To be specific, we use DiT blocks with zero-initialized adaptive Layer Norm (adaLN-zero).
 To enhance the model's alignment ability, we also leverage ConvNeXt V2 blocks~\cite{convnextv2}.
 Its predecessor ConvNeXt V1~\cite{convnext} is used in many works and shows a strong temporal modeling capability in speech domain tasks~\cite{vocos,convnexttts}.
@@ -252,7 +252,7 @@ We utilize the in-the-wild multilingual speech dataset Emilia~\cite{emilia} to t
 After simply filtering out transcription failure and misclassified language speech, we retain approximately 95K hours of English and Chinese data.
 We also trained small models for ablation study and architecture search on WenetSpeech4TTS~\cite{wenet4tts} Premium subset, consisting of a 945 hours Mandarin corpus.
 Base model configurations are introduced below, and small model configurations are in Appendix \ref{appx:smallmodels}.
-Three test sets are adopted for evaluation, which are LibriSpeech-PC \textit{test-clean}~\cite{librispeechpc}, Seed-TTS \textit{test-en}~\cite{seedtts} with 1088 samples from Common Voice~\cite{commonvoice}, and Seed-TTS \textit{test-zh} with 2020 samples from DiDiSpeech~\cite{didispeech}\footnote{\url{https://github.com/BytedanceSpeech/seed-tts-eval}}.
+Three test sets are adopted for evaluation, which are LibriSpeech-PC \textit{test-clean}~\cite{librispeechpc}, [Seed-TTS [39]](../Speech_LLM/2024.06.04_Seed-TTS.md) \textit{test-en} with 1088 samples from Common Voice~\cite{commonvoice}, and Seed-TTS \textit{test-zh} with 2020 samples from DiDiSpeech~\cite{didispeech}\footnote{\url{https://github.com/BytedanceSpeech/seed-tts-eval}}.
 Most of the previous English-only models are evaluated on different subsets of LibriSpeech \textit{test-clean} while the used prompt list is not released, which makes fair comparison difficult.
 Thus we build and release a 4-to-10-second LibriSpeech-PC subset with 1127 samples to facilitate community comparisons.
 
@@ -263,7 +263,7 @@ The AdamW optimizer~\cite{adamw} is used with a peak learning rate of 7.5e-5, li
 We set 1 for the max gradient norm clip.
 The ***F5-TTS*** base model has 22 layers, 16 attention heads, 1024/2048 embedding/feed-forward network (FFN) dimension for DiT; and 4 layers, 512/1024 embedding/FFN dimension for ConvNeXt V2; in total 335.8M parameters.
 The reproduced E2 TTS, a 333.2M flat U-Net equipped Transformer, has 24 layers, 16 attention heads, and 1024/4096 embedding/FFN dimension.
-Both models use RoPE as mentioned in Sec.\ref{sec:f5tts}, a dropout rate of 0.1 for attention and FFN, the same convolutional position embedding as in Voicebox\cite{voicebox}.
+Both models use RoPE as mentioned in Sec.\ref{sec:f5tts}, a dropout rate of 0.1 for attention and FFN, the same convolutional position embedding as in [Voicebox [14]](../Speech_LLM/2023.06.23_VoiceBox.md).
 
 We directly use alphabets and symbols for English, use jieba\footnote{\url{https://github.com/fxsjy/jieba}} and pypinyin\footnote{\url{https://github.com/mozillazg/python-pinyin}} to process raw Chinese characters to full pinyins.
 The character embedding vocabulary size is 2546, counting in the special filler token and all other language characters exist in the Emilia dataset as there are many code-switched sentences.
@@ -275,14 +275,14 @@ We assume that the two-stage control of CFG training may have the model learn mo
 ### Inference
 
 The inference process is mainly elaborated in Sec.\ref{sec:pipeline}.
-We use the Exponential Moving Averaged (EMA)~\cite{ema} weights for inference, and the Euler ODE solver for ***F5-TTS*** (midpoint for E2 TTS as described in \cite{e2tts}).
+We use the Exponential Moving Averaged (EMA)~\cite{ema} weights for inference, and the Euler ODE solver for ***F5-TTS*** (midpoint for E2 TTS as described in [E2 TTS [36]](../Flow/2024.06.26_E2_TTS.md)).
 We use the pretrained vocoder Vocos~\cite{vocos} to convert generated log mel spectrograms to audio signals.
 
 ### Baselines
 
 We compare our models with leading TTS systems including, (mainly)
-autoregressive models: VALL-E 2~\cite{valle2}, MELLE~\cite{melle}, FireRedTTS~\cite{fireredtts} and CosyVoice~\cite{cosyvoice};
-non-autoregressive models: Voicebox~\cite{voicebox}, NaturalSpeech 3~\cite{ns3}, DiTTo-TTS~\cite{dittotts}, MaskGCT~\cite{maskgct}, Seed-TTS$_{DiT}$~\cite{seedtts} and our reproduced E2 TTS~\cite{e2tts}.
+- autoregressive models: [VALL-E 2 [13]](../Speech_LLM/2024.06.08_VALL-E2.md), [MELLE [29]](../Speech_LLM/2024.07.11_MELLE.md), FireRedTTS~\cite{fireredtts} and CosyVoice~\cite{cosyvoice};
+- non-autoregressive models: [Voicebox [14]](../Speech_LLM/2023.06.23_VoiceBox.md), [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md), [DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md), MaskGCT~\cite{maskgct}, [Seed-TTS$_{DiT}$ [39]](../Speech_LLM/2024.06.04_Seed-TTS.md) and our reproduced [E2 TTS [36]](../Flow/2024.06.26_E2_TTS.md).
 Details of compared models see Appendix~\ref{appx:baselines}.
 
 ### Metrics
@@ -290,7 +290,7 @@ Details of compared models see Appendix~\ref{appx:baselines}.
 We measure the performances under \textit{cross-sentence} task.
 The model is given a reference text, a short speech prompt, and its transcription, and made to synthesize a speech reading the reference text mimicking the speech prompt speaker.
 In specific, we report Word Error Rate (WER) and speaker Similarity between generated and the original target speeches (SIM-o) for objective evaluation.
-For WER, we employ Whisper-large-v3~\cite{whisper} to transcribe English and Paraformer-zh~\cite{funasr} for Chinese, following~\cite{seedtts}.
+For WER, we employ Whisper-large-v3~\cite{whisper} to transcribe English and Paraformer-zh~\cite{funasr} for Chinese, following [Seed-TTS [39]](../Speech_LLM/2024.06.04_Seed-TTS.md).
 For SIM-o, we use a WavLM-large-based~\cite{wavlm} speaker verification model to extract speaker embeddings for calculating the cosine similarity of synthesized and ground truth speeches.
 We use Comparative Mean Opinion Scores (CMOS) and Similarity Mean Opinion Scores (SMOS) for subjective evaluation.
 For CMOS, human evaluators are given randomly ordered synthesized speech and ground truth, and are to decide how higher the naturalness of the better one surpasses the counterpart, \textit{w.r.t.}~prompt speech.
@@ -317,7 +317,7 @@ It produces smooth and fluent speech in zero-shot generation with a CMOS of 0.31
 It is worth mentioning that Seed-TTS with the best result is trained with orders of larger model size and dataset (several million hours) than ours.
 As stated in Sec.\ref{sec:pipeline}, we simply estimate duration based on the ratio of the audio prompt's transcript length and the text prompt length.
 If providing ground truth duration, ***F5-TTS*** with 32 NFE and Sway Sampling will have WER of 1.74 for \textit{test-en} and 1.53 for \textit{test-zh} while maintaining the same SIM, indicating a high upper bound.
-A robustness test on ELLA-V \cite{ellav} hard sentences is further included in Appendix \ref{appx:ellavhardtest}.
+A robustness test on [ELLA-V [15]](../Speech_LLM/2024.01.14_ELLA-V.md) hard sentences is further included in Appendix \ref{appx:ellavhardtest}.
 
 ### 5.1.Ablation of Model Architecture
 
