--- a/Models/_Full/2024.08.16_Neural_Speech_&_Audio_Coding.md
+++ b/Models/_Full/2024.08.16_Neural_Speech_&_Audio_Coding.md
@@ -36,11 +36,20 @@
 
 ## Abstract: 摘要
 
-> This paper explores the integration of model-based and data-driven approaches within the realm of neural speech and audio coding systems. It highlights the challenges posed by the subjective evaluation processes of speech and audio codecs and discusses the limitations of purely data-driven approaches, which often require inefficiently large architectures to match the performance of model-based methods. The study presents hybrid systems as a viable solution, offering significant improvements to the performance of conventional codecs through meticulously chosen design enhancements. Specifically, it introduces a neural network-based signal enhancer designed to post-process existing codecs' output, along with the autoencoder-based end-to-end models and LPCNet--hybrid systems that combine linear predictive coding (LPC) with neural networks. Furthermore, the paper delves into predictive models operating within custom feature spaces (TF-Codec) or predefined transform domains (MDCTNet) and examines the use of psychoacoustically calibrated loss functions to train end-to-end neural audio codecs. Through these investigations, the paper demonstrates the potential of hybrid systems to advance the field of speech and audio coding by bridging the gap between traditional model-based approaches and modern data-driven techniques.
+This paper explores the integration of model-based and data-driven approaches within the realm of neural speech and audio coding systems.
+It highlights the challenges posed by the subjective evaluation processes of speech and audio codecs and discusses the limitations of purely data-driven approaches, which often require inefficiently large architectures to match the performance of model-based methods.
+The study presents hybrid systems as a viable solution, offering significant improvements to the performance of conventional codecs through meticulously chosen design enhancements.
+Specifically, it introduces a neural network-based signal enhancer designed to post-process existing codecs' output, along with the autoencoder-based end-to-end models and LPCNet--hybrid systems that combine linear predictive coding (LPC) with neural networks.
+Furthermore, the paper delves into predictive models operating within custom feature spaces (TF-Codec) or predefined transform domains (MDCTNet) and examines the use of psychoacoustically calibrated loss functions to train end-to-end neural audio codecs.
+Through these investigations, the paper demonstrates the potential of hybrid systems to advance the field of speech and audio coding by bridging the gap between traditional model-based approaches and modern data-driven techniques.
 
 ## 1.Introduction: 引言
 
-> Traditional speech and audio coding is a well-established technology, where various model-based approaches have been effective in compressing raw audio signals into compact bitstrings (encoding) and then restoring them to their original signal domain (decoding). These models aim to maintain the original signal's quality, such as speech intelligibility or other perceptual sound qualities, which are often subjectively defined. Hence, developing such models typically involves multiple rounds of listening tests to precisely measure the codec's performance. Although these models are designed by domain experts based on their knowledge and experience, finalizing them still requires tuning their parameters through listening tests and manual adjustments. Figure \ref{fig:legacy-codec} illustrates the ordinary development process of model-based coding systems.
+Traditional speech and audio coding is a well-established technology, where various model-based approaches have been effective in compressing raw audio signals into compact bitstrings (encoding) and then restoring them to their original signal domain (decoding).
+These models aim to maintain the original signal's quality, such as speech intelligibility or other perceptual sound qualities, which are often subjectively defined.
+Hence, developing such models typically involves multiple rounds of listening tests to precisely measure the codec's performance.
+Although these models are designed by domain experts based on their knowledge and experience, finalizing them still requires tuning their parameters through listening tests and manual adjustments.
+Figure \ref{fig:legacy-codec} illustrates the ordinary development process of model-based coding systems.
 
 ## 2.Related Works: 相关工作
 
